# SpreadLab-web

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  UNKNOWN_SPECIES_AUDIT.md  compose.yaml
crates/spreadlab-web/: Cargo.toml  README.md  tailwind.config.js
crates/spreadlab-web/assets/: app.css  app.js
crates/spreadlab-web/src/: main.rs  ui.rs
