[package]
name = "spreadlab-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dedicated Rust WebUI for the SpreadLab Pokémon Champions optimizer"
readme = "../../README.md"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
leptos = { version = "0.8.6", features = ["ssr"] }
leptos_meta = { version = "0.8.6", features = ["ssr"] }
leptos_router = { version = "0.8.6", features = ["ssr"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
damage_calc = { package = "pkmn-dmg-lib", git = "https://github.com/D35P4C1T0/pkmn-dmg-lib-rs.git", rev = "515a8ff29cfd73e4f1efed91c2b999b1a3744b9c", features = ["serde"] }
spreadlab-rs = { git = "https://github.com/D35P4C1T0/SpreadLab.git", rev = "f0f792ab0ec63cf7fde0be8da53f9838bb435979" }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-livereload = "0.10.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
